Se actualiza algunas paginas

--- a/carreras/universitarias/admempresas.html
+++ b/carreras/universitarias/admempresas.html
@@ -36,14 +36,16 @@
     <div class="menu">
       
       <nav class="sub-menu text-center contenedor navbar">
-        <a href="/index.html"><img src="/assets/images/home.png" alt="iconoInicio"></a>
-        <li class="dropdown"><a href="/oferta-academica.html">PREGRADO<i class="bi bi-chevron-down"></i></a>
+        <a href="/index.html"><img src="/assets/images/home1.png" alt="iconoInicio"></a>
+        <li class="dropdown"><a href="/oferta-academica.html">CARRERAS UNIVERSITARIAS<i class="bi bi-chevron-down"></i></a>
           <ul> 
-            <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
-            <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
-            <li><a href="/carreras/maestrias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
-            <li><a href="/carreras/maestrias/calidadProductividad.html">Tecnología Superior en Calidad y Productividad</a></li>
-            <li><a href="formacioncontinua.html">Tecnología Superior Universitaria en Contabilidad</a></li>    
+            <li><a href="/carreras/universitarias/salud.html">Administración de Sistemas de Salud</a></li>
+            <li><a href="/carreras/universitarias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
+            <li><a href="/carreras/universitarias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
+            <li><a href="/carreras/universitarias/calidadProductividad.html">Calidad y Productividad</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Contabilidad</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Educación Básica</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Educación Inicial</a></li>    
           </ul>
         </li>
         <li class="dropdown"><a href="/formacion-continua.html">FORMACIÓN CONTINUA<i class="bi bi-chevron-down"></i></a>
@@ -67,13 +69,15 @@
       <input type="checkbox" id="check" class="menu_checkbox">
       <ul class="menu-mobile-items">
         <li><a href="/index.html">Inicio</a></li>
-        <li class="dropdown"><a href="/ofertaAcademica.html">PREGRADO<i class="bi bi-chevron-down"></i></a>
+        <li class="dropdown"><a href="/ofertaAcademica.html">CARRERAS UNIVERSITARIAS<i class="bi bi-chevron-down"></i></a>
           <ul> 
-            <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
-            <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
-            <li><a href="/carreras/maestrias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
-            <li><a href="/carreras/maestrias/contabilidad.html">Tecnología Superior Universitaria en Contabilidad </a></li>
-            <li><a href="/formacioncontinua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
+            <li><a href="/carreras/universitarias/salud.html">Administración de Sistemas de Salud</a></li>
+            <li><a href="/carreras/universitarias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
+            <li><a href="/carreras/universitarias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
+            <li><a href="/carreras/universitarias/calidadProductividad.html">Calidad y Productividad</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Contabilidad</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Educación Básica</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Educación Inicial</a></li>       
           </ul>
         </li>
         <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
@@ -158,7 +162,7 @@
   </div>
   
   <div class="curso">
-    <h2>TECNOLOGÍA SUPERIOR UNIVERSITARIA EN ADMINISTRACIÓN DE EMPRESAS E INTELIGENCIA DE NEGOCIOS</h2>
+    <h2>ADMINISTRACIÓN DE EMPRESAS E INTELIGENCIA DE NEGOCIOS</h2>
     <div class="detalle">
         <h3 class="titulo-click">DOCUMENTACIÓN<span class="arrow">▼</span></h3>
         <div class="contenido">
