--- a/carreras/universitarias/basica.html
+++ b/carreras/universitarias/basica.html
@@ -91,16 +91,16 @@
         <li><a href="/matriculate-online.html">MATRICULATE ONLINE</a></li>
       </ul>  
     </div>
-
+    
   </header>
 
-  <section class="tecnologia-calidad">
+  <section class="tecnologia-innovacion">
     <div class="contenido-oferta">
 
       <div class="form-texto">
 
         <div class="texto-esp text-center">
-          <h2>CALIDAD Y PRODUCTIVIDAD</h2>
+          <h2>EDUCACIÓN BÁSICA</h2>
           <!--<p>En este Diplomado, exploraremos la importancia del cuidado
             del adulto mayor, los desafíos que enfrentan los adultos
             mayores y sus cuidadores.</p>
@@ -150,7 +150,7 @@
   </div>-->
 
   <div class="texto-formcontinua texto-intro">
-    <p>En el contexto de un mercado laboral cada vez más competitivo y globalizado, la formación en áreas clave como la calidad y la productividad se vuelve imprescindible para asegurar el éxito tanto a nivel personal como profesional. La carrera de Tecnología Superior Universitaria en Calidad y Productividad, ofrecida por el Instituto Superior Universitario Bolivariano a través de su plataforma Bolivariano Online, emerge como una respuesta estratégica a las demandas del mundo contemporáneo, donde la eficiencia y la excelencia son pilares fundamentales en cualquier organización. </p>
+    <p>En un entorno empresarial y tecnológico en constante evolución, la capacidad de liderar y gestionar la innovación estratégica se ha convertido en un diferenciador crucial para el éxito organizacional. En este contexto, la carrera de Tecnología Superior Universitaria en Administración Tecnológica e Innovación Estratégica, ofrecida por el Instituto Superior Universitario Bolivariano a través de su plataforma Bolivariano Online, emerge como una oportunidad inigualable para aquellos que aspiran a impulsar el progreso y la competitividad en el mundo empresarial actual y globalizado. </p>
   </div>
 
   <div class="banner-adm">
@@ -163,14 +163,11 @@
   </div>
   
   <div class="curso">
-    <h2>TECNOLOGÍA SUPERIOR UNIVERSITARIA EN CALIDAD Y PRODUCTIVIDAD</h2>
+    <h2>TECNOLOGÍA SUPERIOR UNIVERSITARIA EN EDUCACIÓN BÁSICA</h2>
     <div class="detalle">
         <h3 class="titulo-click">DOCUMENTACIÓN<span class="arrow">▼</span></h3>
         <div class="contenido">
-            <ul>
-              <li>Copia de cedula y certificado de votación actualizados</li>
-              <li>copia del título de bachiller (en donde se visualiza título otorgado y nota de grado)</li>
-            </ul>
+            <p>Copia de cédula y certificado de votación actualizados, copia del título de bachiller (en donde se visualiza título otorgado y nota de grado).</p>
         </div>
     </div>
     <div class="detalle">
@@ -185,13 +182,36 @@
         <h3 class="titulo-click">PERFIL PROFESIONAL<span class="arrow">▼</span></h3>
         <div class="contenido">
             <ul>
-              <li>Conoce el marco normativo que regula el entorno empresarial en el país.</li>
-              <li>Gestiona los recursos materiales y humanos en los procesos de las entidades y establecimientos de producción y fabricación de bienes e insumos y de servicios.</li>
-              <li>Aplica conocimientos de gestión de la calidad, para la importación y exportación de bienes en entidades comerciales y de producción.</li>
-              <li>Diseña y ejecuta estrategias y procedimientos para la gestión eficiente dentro de las entidades y establecimientos de producción de bienes y de servicios.</li>
-              <li>Aplica procedimientos de auditoría en procesos relacionados con la producción de bienes y servicios.</li>
-              <li>Conoce y aplica técnicas y herramientas tecnológicas relacionadas con la gestión de la calidad dentro de establecimientos de producción de bienes y de servicios.</li>
-              <li>Pone en práctica conocimientos teóricos en el desarrollo de investigaciones básicas, en hechos relacionados con el comercio y la prestación de servicios y emite conclusiones que orienten en las decisiones de gerentes y directorios de empresas.</li>
+              <li>Conoce el sistema educativo y política pública con
+                el sentido de apoyar la gestión y planificación
+                educativa.</li>
+              <li>Conoce aspectos psicológicos enfocados en
+                procesos mentales que ocurren durante el período
+                de aprendizaje, así como las características específicas
+                del proceso en función de la edad.</li>
+              <li>Conoce los principios y técnicas que orientan la
+                enseñanza y el aprendizaje, bajo los diferentes
+                tipos de didáctica según conste en la malla curricular.</li>
+              <li>Comprende y apoya los procesos, métodos, saberes
+                y conocimientos disciplinarios e investigativos
+                de la educación para apoyar la generación de
+                aprendizaje.</li>
+              <li>Apoya la optimización de procesos de enseñanza,
+                promoviendo la adquisición de conocimientos,
+                habilidades y valores por parte de los estudiantes.</li>
+              <li>Aplica estrategias, recursos didácticos, teóricos y
+                metodológicos en su labor educativa en función
+                de la diversidad de contextos y ambientes de
+                aprendizaje.</li>
+              <li>Describe necesidades, problemas y desafíos del
+                mundo contemporáneo.</li>
+              <li>Aplica conocimientos de expresión corporal y
+                lúdica en actividades enfocadas a dinamizar la
+                hora clase y que permiten reforzar los contenidos
+                académicos.</li>
+              <li>Conoce herramientas tecnológicas para la innovación
+                educativa y para promover la enseñanza de
+                calidad.</li>
             </ul>
         </div>
     </div>
@@ -199,8 +219,8 @@
         <h3 class="titulo-click">CAMPO OCUPACIONAL<span class="arrow">▼</span></h3>
         <div class="contenido">
           <p>
-            Los graduados pueden aspirar a oportunidades laborales en empresas de diferentes áreas e instituciones gubernamentales y organizaciones no gubernamentales relacionadas con el ámbito empresarial, industrial y tecnológico. 
-            Los beneficios de disponer este tipo de profesionales permiten al sector empresarial enfocarse en: la planificación, organización e implementación de programas para la mejora continua de procesos de calidad y productividad; manejar herramientas tecnológicas afines al campo de especialización para la optimización de procesos; implementar procesos operativos eficientes desde la construcción de herramientas básicas en la distribución y planificación de actividades; evaluar la eficacia del sistema de gestión de la calidad; comprender la importancia de la ética y la responsabilidad social; desarrollar capacidades para adaptarse a cambios organizacionales, mediante la implementación de los sistemas de gestión de la calidad y se compromete a un aprendizaje continuo y actualización de conocimientos.
+            El profesional de Educación Básica se desempeña como maestro en instituciones educativas de nivel urbano y rural, en establecimientos fiscales, particulares, municipales, fiscomisionales a nivel primario. <br>
+            Forma parte de comunidades científico-pedagógicas de carácter interdisciplinario, encargadas de analizar y evaluar los resultados de reformas y políticas educativas, con miras a presentar propuestas alternativas: Integra equipos académicos de gestión y ejecución de proyectos de enseñanza, ocupa cargos de dirección de instituciones educativas.
           </p>
         </div>
     </div>
@@ -208,7 +228,7 @@
 
   <div class="btn-malla_fin">
     <div class="boton-informacion contenedor">
-      <a href="/assets/images/malla/calidadyproductividad.png" target="_blank">MALLA</a>
+      <a href="/assets/images/malla/basica.png" target="_blank">MALLA</a>
     </div>
   
     <div class="boton-fin contenedor">
