--- a/carreras/universitarias/contabilidad.html
+++ b/carreras/universitarias/contabilidad.html
@@ -37,13 +37,15 @@
       
       <nav class="sub-menu text-center contenedor navbar">
         <a href="/index.html"><img src="/assets/images/home.png" alt="iconoInicio"></a>
-        <li class="dropdown"><a href="/oferta-academica.html">PREGRADO<i class="bi bi-chevron-down"></i></a>
+        <li class="dropdown"><a href="/oferta-academica.html">CARRERAS UNIVERSITARIAS<i class="bi bi-chevron-down"></i></a>
           <ul> 
-            <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
-            <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
-            <li><a href="/carreras/maestrias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
-            <li><a href="/carreras/maestrias/contabilidad.html">Tecnología Superior Universitaria en Contabilidad </a></li>
-            <li><a href="formacioncontinua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
+            <li><a href="/carreras/universitarias/salud.html">Administración de Sistemas de Salud</a></li>
+            <li><a href="/carreras/universitarias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
+            <li><a href="/carreras/universitarias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
+            <li><a href="/carreras/universitarias/calidadProductividad.html">Calidad y Productividad</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Contabilidad</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Educación Básica</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Educación Inicial</a></li>    
           </ul>
         </li>
         <li class="dropdown"><a href="/formacion-continua.html">FORMACIÓN CONTINUA<i class="bi bi-chevron-down"></i></a>
@@ -67,13 +69,15 @@
       <input type="checkbox" id="check" class="menu_checkbox">
       <ul class="menu-mobile-items">
         <li><a href="/index.html">Inicio</a></li>
-        <li class="dropdown"><a href="/ofertaAcademica.html">PREGRADO<i class="bi bi-chevron-down"></i></a>
+        <li class="dropdown"><a href="/ofertaAcademica.html">CARRERAS UNIVERSITARIAS<i class="bi bi-chevron-down"></i></a>
           <ul> 
-            <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
-            <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
-            <li><a href="/carreras/maestrias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
-            <li><a href="/carreras/maestrias/contabilidad.html">Tecnología Superior Universitaria en Contabilidad </a></li>
-            <li><a href="/formacioncontinua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
+            <li><a href="/carreras/universitarias/salud.html">Administración de Sistemas de Salud</a></li>
+            <li><a href="/carreras/universitarias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
+            <li><a href="/carreras/universitarias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
+            <li><a href="/carreras/universitarias/calidadProductividad.html">Calidad y Productividad</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Contabilidad</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Educación Básica</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Educación Inicial</a></li>       
           </ul>
         </li>
         <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
@@ -87,6 +91,7 @@
         <li><a href="/matriculate-online.html">MATRICULATE ONLINE</a></li>
       </ul>  
     </div>
+
   </header>
 
   <section class="tecnologia-innovacion">
@@ -95,7 +100,7 @@
       <div class="form-texto">
 
         <div class="texto-esp text-center">
-          <h2>TECNOLOGÍA SUPERIOR UNIVERSITARIA EN CONTABILIDAD</h2>
+          <h2>CONTABILIDAD</h2>
           <!--<p>En este Diplomado, exploraremos la importancia del cuidado
             del adulto mayor, los desafíos que enfrentan los adultos
             mayores y sus cuidadores.</p>
@@ -179,33 +184,48 @@
     <div class="detalle">
         <h3 class="titulo-click">PERFIL PROFESIONAL<span class="arrow">▼</span></h3>
         <div class="contenido">
-           <!--<ul>
-              <li>Conoce el marco normativo que regula al comercio, firma electrónica y propiedad intelectual en el país.</li>
-              <li>Conoce términos y procesos usados en comercio internacional y los aplica en la importación de bienes en entidades tecnológicos.</li>
-              <li>Interpreta el flujo de la información dentro de una organización y ejecuta mejoras en los sistemas de información y comunicaciones dentro de una organización.</li>
-              <li>Usa los datos generados por una organización, los procesa y pone la información, a disposición de las áreas directivas, para la toma de decisiones de la organización.</li>
-              <li>Emplea recursos financieros y humanos, en la implementación de proyectos de innovación dentro de entidades y establecimientos comerciales y de servicios tecnológicos.</li>
-              <li>Ejecuta técnicas de innovación, para el mejoramiento y eficiencia de los procesos empresariales, en las entidades y establecimientos comerciales y de servicios tecnológicos.</li>
-              <li>Conoce herramientas tecnológicas de machine learning y las aplica en la innovación tecnológica, aplicada a los negocios y gestión y seguridad de datos.</li>
-            </ul>-->
+          <ul>
+              <li>Conoce herramientas contables para
+                apoyar la gestión de los registros contables,
+                financieros y preparación de informes.</li>
+              <li>Colabora en la gestión y procesamiento de
+                información contable para el registro de
+                operaciones, observando principios y
+                normas para presentar estados financieros.</li>
+              <li>Conoce leyes y normas que regulan las
+                actividades contables, mercantiles y societarias.</li>
+              <li>Adquiere conocimientos de las diferentes
+                ramas de la Contabilidad como: bancaria,
+                de costos y de tipo gubernamental.</li>
+              <li>Aplica conocimientos tributarios en las
+                declaraciones de impuestos, formularios
+                SRI y aplicativos correspondientes.</li>
+              <li>Conoce softwares contables para apoyar
+                procesos contables y desarrollar actividades
+                de manera eficiente.</li>
+              <li>Apoya procesos de auditoría financiera,
+                tributaria y contable de diferentes sectores
+                empresariales, bancarios y producción.</li>
+              <li>Conoce conceptos básicos referentes a la
+                administración, marketing, liderazgo,
+                emprendimientos y asignaturas para una
+                formación integral al profesional contable.</li>
+          </ul>
         </div>
     </div>
     <div class="detalle">
         <h3 class="titulo-click">CAMPO OCUPACIONAL<span class="arrow">▼</span></h3>
         <div class="contenido">
-            <!--<ul>
-                <li><span>MÓDULO 1:</span> LUDOTERAPIA PARA ADULTOS MAYORES</li>
-                <li><span>MÓDULO 2:</span> CUIDADOS PALIATIVOS EN EL ADULTO MAYOR</li>
-                <li><span>MÓDULO 3:</span> PREVENCIÓN DE ENFERMEDADES, SALUD Y NUTRICIÓN</li>
-                <li><span>MÓDULO 4:</span> FISIOTERAPIA EN EL CUIDADO DEL ADULTO MAYOR</li>
-            </ul>-->
+          <p>
+            El profesional de Contabilidad estará en capacidad de apoyar y aplicar conocimientos adquiridos en su formación académica y así satisfacer las necesidades de las empresas para fortalecer el área contable, financiera y tributaria.
+          </p>
         </div>
     </div>
   </div>
 
   <div class="btn-malla_fin">
     <div class="boton-informacion contenedor">
-      <a href="/assets/images/img-carreras/mallaCurricular.png" target="_blank">MALLA</a>
+      <a href="/assets/images/malla/contabilidad.png" target="_blank">MALLA</a>
     </div>
   
     <div class="boton-fin contenedor">
