--- a/carreras/universitarias/inicial.html
+++ b/carreras/universitarias/inicial.html
@@ -91,16 +91,16 @@
         <li><a href="/matriculate-online.html">MATRICULATE ONLINE</a></li>
       </ul>  
     </div>
-
+    
   </header>
 
-  <section class="tecnologia-calidad">
+  <section class="tecnologia-eduinic">
     <div class="contenido-oferta">
 
       <div class="form-texto">
 
         <div class="texto-esp text-center">
-          <h2>CALIDAD Y PRODUCTIVIDAD</h2>
+          <h2>EDUCACIÓN INICIAL</h2>
           <!--<p>En este Diplomado, exploraremos la importancia del cuidado
             del adulto mayor, los desafíos que enfrentan los adultos
             mayores y sus cuidadores.</p>
@@ -150,7 +150,7 @@
   </div>-->
 
   <div class="texto-formcontinua texto-intro">
-    <p>En el contexto de un mercado laboral cada vez más competitivo y globalizado, la formación en áreas clave como la calidad y la productividad se vuelve imprescindible para asegurar el éxito tanto a nivel personal como profesional. La carrera de Tecnología Superior Universitaria en Calidad y Productividad, ofrecida por el Instituto Superior Universitario Bolivariano a través de su plataforma Bolivariano Online, emerge como una respuesta estratégica a las demandas del mundo contemporáneo, donde la eficiencia y la excelencia son pilares fundamentales en cualquier organización. </p>
+    <p>En un entorno empresarial y tecnológico en constante evolución, la capacidad de liderar y gestionar la innovación estratégica se ha convertido en un diferenciador crucial para el éxito organizacional. En este contexto, la carrera de Tecnología Superior Universitaria en Administración Tecnológica e Innovación Estratégica, ofrecida por el Instituto Superior Universitario Bolivariano a través de su plataforma Bolivariano Online, emerge como una oportunidad inigualable para aquellos que aspiran a impulsar el progreso y la competitividad en el mundo empresarial actual y globalizado. </p>
   </div>
 
   <div class="banner-adm">
@@ -163,14 +163,11 @@
   </div>
   
   <div class="curso">
-    <h2>TECNOLOGÍA SUPERIOR UNIVERSITARIA EN CALIDAD Y PRODUCTIVIDAD</h2>
+    <h2>TECNOLOGÍA SUPERIOR UNIVERSITARIA EN EDUCACIÓN INICIAL</h2>
     <div class="detalle">
         <h3 class="titulo-click">DOCUMENTACIÓN<span class="arrow">▼</span></h3>
         <div class="contenido">
-            <ul>
-              <li>Copia de cedula y certificado de votación actualizados</li>
-              <li>copia del título de bachiller (en donde se visualiza título otorgado y nota de grado)</li>
-            </ul>
+            <p>Copia de cédula y certificado de votación actualizados, copia del título de bachiller (en donde se visualiza título otorgado y nota de grado).</p>
         </div>
     </div>
     <div class="detalle">
@@ -185,13 +182,26 @@
         <h3 class="titulo-click">PERFIL PROFESIONAL<span class="arrow">▼</span></h3>
         <div class="contenido">
             <ul>
-              <li>Conoce el marco normativo que regula el entorno empresarial en el país.</li>
-              <li>Gestiona los recursos materiales y humanos en los procesos de las entidades y establecimientos de producción y fabricación de bienes e insumos y de servicios.</li>
-              <li>Aplica conocimientos de gestión de la calidad, para la importación y exportación de bienes en entidades comerciales y de producción.</li>
-              <li>Diseña y ejecuta estrategias y procedimientos para la gestión eficiente dentro de las entidades y establecimientos de producción de bienes y de servicios.</li>
-              <li>Aplica procedimientos de auditoría en procesos relacionados con la producción de bienes y servicios.</li>
-              <li>Conoce y aplica técnicas y herramientas tecnológicas relacionadas con la gestión de la calidad dentro de establecimientos de producción de bienes y de servicios.</li>
-              <li>Pone en práctica conocimientos teóricos en el desarrollo de investigaciones básicas, en hechos relacionados con el comercio y la prestación de servicios y emite conclusiones que orienten en las decisiones de gerentes y directorios de empresas.</li>
+              <li>Conoce las metodologías y técnicas de enseñanza para el buen aprendizaje.</li>
+              <li>Conoce las relaciones entre la estimulación, expresión artística musical, lingüística y recreacional por medio de estrategias didácticas y pedagógicas en áreas curriculares de la Educación Inicial.</li>
+              <li>Comprende, valora y respeta el desarrollo
+                integral de la niñez y la diversidad.</li>
+              <li>Colabora en la solución de problemas
+                basada en la comunicación asertiva y pertinente
+                en la gestión con padres y la comunidad.</li>
+              <li>Aplica los conocimientos de desarrollo y
+                estimulación temprana, expresión artística y
+                lingüística, así como ejercicios básicos
+                científicos.</li>
+              <li>Conoce los diversos ámbitos educativos
+                desarrollando los conocimientos y habilidades
+                para actuar en el aula.</li>
+              <li>Apoya la generación de propuestas, estrategias,
+                materiales, recursos y la evaluación
+                para el aprendizaje.</li>
+              <li>Conoce la gestión, organización y dirección
+                de proyectos e incluso emprendimientos
+                educativos propios.</li>
             </ul>
         </div>
     </div>
@@ -199,8 +209,7 @@
         <h3 class="titulo-click">CAMPO OCUPACIONAL<span class="arrow">▼</span></h3>
         <div class="contenido">
           <p>
-            Los graduados pueden aspirar a oportunidades laborales en empresas de diferentes áreas e instituciones gubernamentales y organizaciones no gubernamentales relacionadas con el ámbito empresarial, industrial y tecnológico. 
-            Los beneficios de disponer este tipo de profesionales permiten al sector empresarial enfocarse en: la planificación, organización e implementación de programas para la mejora continua de procesos de calidad y productividad; manejar herramientas tecnológicas afines al campo de especialización para la optimización de procesos; implementar procesos operativos eficientes desde la construcción de herramientas básicas en la distribución y planificación de actividades; evaluar la eficacia del sistema de gestión de la calidad; comprender la importancia de la ética y la responsabilidad social; desarrollar capacidades para adaptarse a cambios organizacionales, mediante la implementación de los sistemas de gestión de la calidad y se compromete a un aprendizaje continuo y actualización de conocimientos.
+            El profesional en Educación Inicial se desempeñará como maestro en centros de educación infantil tanto públicos como privados, integra el equipo profesional laboral de instituciones educativas de servicios y programas sociales de atención a la infancia, servicios educativos de apoyo a las escuelas, impartición de actividades extraescolares, proyectos de atención a la familia, programas materno-infantiles, apoyo escolar en servicios hospitalarios infantiles, elaboración de materiales didácticos, libros de texto, programas informáticos, participación en proyectos de museos y teatros que tengan finalidad educativa, servicios de ocio y cultura, como ludotecas, bibliotecas infantiles, actividades deportivas, centros de educación ambiental, entre otros.
           </p>
         </div>
     </div>
@@ -208,7 +217,7 @@
 
   <div class="btn-malla_fin">
     <div class="boton-informacion contenedor">
-      <a href="/assets/images/malla/calidadyproductividad.png" target="_blank">MALLA</a>
+      <a href="/assets/images/malla/inicial.png" target="_blank">MALLA</a>
     </div>
   
     <div class="boton-fin contenedor">
