--- a/carreras/universitarias/tecnologia.html
+++ b/carreras/universitarias/tecnologia.html
@@ -37,13 +37,15 @@
       
       <nav class="sub-menu text-center contenedor navbar">
         <a href="/index.html"><img src="/assets/images/home.png" alt="iconoInicio"></a>
-        <li class="dropdown"><a href="/oferta-academica.html">PREGRADO<i class="bi bi-chevron-down"></i></a>
+        <li class="dropdown"><a href="/oferta-academica.html">CARRERAS UNIVERSITARIAS<i class="bi bi-chevron-down"></i></a>
           <ul> 
-            <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
-            <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
-            <li><a href="/carreras/maestrias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
-            <li><a href="/carreras/maestrias/calidadProductividad.html">Tecnología Superior en Calidad y Productividad</a></li>
-            <li><a href="formacioncontinua.html">Tecnología Superior Universitaria en Contabilidad</a></li>    
+            <li><a href="/carreras/universitarias/salud.html">Administración de Sistemas de Salud</a></li>
+            <li><a href="/carreras/universitarias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
+            <li><a href="/carreras/universitarias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
+            <li><a href="/carreras/universitarias/calidadProductividad.html">Calidad y Productividad</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Contabilidad</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Educación Básica</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Educación Inicial</a></li>    
           </ul>
         </li>
         <li class="dropdown"><a href="/formacion-continua.html">FORMACIÓN CONTINUA<i class="bi bi-chevron-down"></i></a>
@@ -67,13 +69,15 @@
       <input type="checkbox" id="check" class="menu_checkbox">
       <ul class="menu-mobile-items">
         <li><a href="/index.html">Inicio</a></li>
-        <li class="dropdown"><a href="/ofertaAcademica.html">PREGRADO<i class="bi bi-chevron-down"></i></a>
+        <li class="dropdown"><a href="/ofertaAcademica.html">CARRERAS UNIVERSITARIAS<i class="bi bi-chevron-down"></i></a>
           <ul> 
-            <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
-            <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
-            <li><a href="/carreras/maestrias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
-            <li><a href="/carreras/maestrias/contabilidad.html">Tecnología Superior Universitaria en Contabilidad </a></li>
-            <li><a href="/formacioncontinua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
+            <li><a href="/carreras/universitarias/salud.html">Administración de Sistemas de Salud</a></li>
+            <li><a href="/carreras/universitarias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
+            <li><a href="/carreras/universitarias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
+            <li><a href="/carreras/universitarias/calidadProductividad.html">Calidad y Productividad</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Contabilidad</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Educación Básica</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Educación Inicial</a></li>       
           </ul>
         </li>
         <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
@@ -87,6 +91,7 @@
         <li><a href="/matriculate-online.html">MATRICULATE ONLINE</a></li>
       </ul>  
     </div>
+
   </header>
 
   <section class="tecnologia-innovacion">
@@ -95,7 +100,7 @@
       <div class="form-texto">
 
         <div class="texto-esp text-center">
-          <h2>TECNOLOGÍA SUPERIOR UNIVERSITARIA EN ADMINISTRACIÓN TECNOLÓGICA E INNOVACIÓN ESTRATÉGICA</h2>
+          <h2>ADMINISTRACIÓN TECNOLÓGICA E INNOVACIÓN ESTRATÉGICA</h2>
           <!--<p>En este Diplomado, exploraremos la importancia del cuidado
             del adulto mayor, los desafíos que enfrentan los adultos
             mayores y sus cuidadores.</p>
@@ -190,19 +195,17 @@
     <div class="detalle">
         <h3 class="titulo-click">CAMPO OCUPACIONAL<span class="arrow">▼</span></h3>
         <div class="contenido">
-            <!--<ul>
-                <li><span>MÓDULO 1:</span> LUDOTERAPIA PARA ADULTOS MAYORES</li>
-                <li><span>MÓDULO 2:</span> CUIDADOS PALIATIVOS EN EL ADULTO MAYOR</li>
-                <li><span>MÓDULO 3:</span> PREVENCIÓN DE ENFERMEDADES, SALUD Y NUTRICIÓN</li>
-                <li><span>MÓDULO 4:</span> FISIOTERAPIA EN EL CUIDADO DEL ADULTO MAYOR</li>
-            </ul>-->
+          <p>
+            Los graduados elegirán oportunidades laborales en empresas de diferentes áreas e instituciones gubernamentales y organizaciones no gubernamentales relacionadas con el ámbito empresarial, comercial y tecnológico. <br> Los beneficios de disponer este tipo de profesionales permiten al sector empresarial:
+            captar y fidelizar clientes, incrementando la cuota de mercado en una actividad determinada; optimizar procesos, incrementando la productividad del trabajo; desarrollar nuevos productos y servicios para crear actividades íntegras y modernas. Los administradores enfrentan opciones para aplicar la nueva tecnología, puede usarse para limitar tareas y responsabilidades de los trabajadores y deshabilitar a la fuerza del trabajo, cuando se maneja efectivamente los trabajadores mejora la competitividad de las organizaciones. Las iniciativas de innovación pueden no ser tecnológicas, pero la innovación tiende a ser más tecnológica.
+          </p>
         </div>
     </div>
   </div>
 
   <div class="btn-malla_fin">
     <div class="boton-informacion contenedor">
-      <a href="/assets/images/img-carreras/mallaCurricular.png" target="_blank">MALLA</a>
+      <a href="/assets/images/malla/tecnologia.png" target="_blank">MALLA</a>
     </div>
   
     <div class="boton-fin contenedor">
