--- a/metodologia-estudio.html
+++ b/metodologia-estudio.html
@@ -38,19 +38,19 @@
         <a href="index.html"><img src="assets/images/home1.png" alt="iconoInicio"></a>
         <li class="dropdown"><a href="admisiones-iub.html">ADMISIONES<i class="bi bi-chevron-down"></i></a>
           <ul> 
-            <li><a href="oferta-academica.html">PREGRADO</a></li> 
+            <li><a href="oferta-academica.html">CARRERAS UNIVERSITARIAS</a></li> 
             <li><a href="formacion-continua.html">FORMACION CONTINUA</a></li>   
           </ul>
         </li>
         <li class="dropdown"><a href="oferta-academica.html">OFERTA ACADEMICA<i class="bi bi-chevron-down"></i></a>
-          <ul> 
+          <!--<ul> 
             <li><a href="oferta-academica.html">PREGRADO</a></li>
             <li><a href="formacion-continua.html">FORMACION CONTINUA</a></li>   
-          </ul>
+          </ul>-->
         </li>
         <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
         <a href="http://localhost/iubonline/matriculate-online.php" target="_blank">MATRICULATE ONLINE</a>
-        <a href="metodologia-estudio.html">METODOLOGIA DE ESTUDIO</a>
+        <a href="metodologia-estudio.html">METODOLOGÍA DE ESTUDIO</a>
         <a href="https://bolivarianovirtual.com/login/index.php">BOLIVARIANO DIGITAL EDUCA</a>
       </nav>
       
@@ -65,19 +65,19 @@
         <!--<li><a href="index.html">Inicio</a></li>-->
         <li class="dropdown"><a href="admisiones-iub.html">ADMISIONES<i class="bi bi-chevron-down"></i></a>
           <ul> 
-            <li><a href="oferta-academica.html">PREGRADO</a></li> 
+            <li><a href="oferta-academica.html">CARRERAS UNIVERSITARIAS</a></li> 
             <li><a href="formacion-continua.html">FORMACION CONTINUA</a></li>   
           </ul>
         </li>
         <li class="dropdown"><a href="oferta-academica.html">OFERTA ACADEMICA<i class="bi bi-chevron-down"></i></a>
-          <ul> 
+          <!--<ul> 
             <li><a href="oferta-academica.html">PREGRADO</a></li> 
             <li><a href="formacion-continua.html">FORMACION CONTINUA</a></li>   
-          </ul>
+          </ul>-->
         </li>
         <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
         <a href="matriculate-online.php">MATRICULATE ONLINE</a>
-        <a href="metodologia-estudio.html">METODOLOGIA DE ESTUDIO</a>
+        <a href="metodologia-estudio.html">METODOLOGÍA DE ESTUDIO</a>
         <a href="https://bolivarianovirtual.com/login/index.php">BOLIVARIANO DIGITAL EDUCA</a>
       </ul>  
     </div>
