--- a/oferta-academica.html
+++ b/oferta-academica.html
@@ -205,7 +205,7 @@
           <p>Explora programas de vanguardia que te prepararán para una carrera impactante en el campo de la salud. Únete a nosotros y sé parte del cambio en el cuidado de la salud.</p>
         </div>
         <div class="enlace-carrera">
-          <a href="/carreras/maestrias/salud.html">Conoce Más</a>
+          <a href="/carreras/universitarias/salud.html">Conoce Más</a>
         </div>
         
       </div>
@@ -219,7 +219,7 @@
           <p>Sabemos que tu pasión te llevará lejos, por eso te invitamos a explotar tu potencial con un conjunto de posgrados de vanguardia. Descubre una oferta que te permitirá ampliar tus conocimientos y cambiar tu futuro profesional.</p>
         </div>
         <div class="enlace-carrera">
-          <a href="/carreras/maestrias/tecnologia.html">Conoce Más</a>
+          <a href="/carreras/universitarias/tecnologia.html">Conoce Más</a>
         </div>
       </div>
 
@@ -232,7 +232,7 @@
           <p>Nos destacamos por nuestra propuesta única de cinco maestrías que aportan a la formación de profesionales integrales, líderes de impacto y globalmente competitivos. Posgradistas que comprenden las exigencias actuales y destacan en el mundo de los negocios.</p>
         </div>
         <div class="enlace-carrera">
-          <a href="/carreras/maestrias/admempresas.html">Conoce Más</a>
+          <a href="/carreras/universitarias/admempresas.html">Conoce Más</a>
         </div>
       </div>
       
@@ -245,7 +245,7 @@
           <p>Descubre una oferta de clase mundial sin salir de tu país. Nuestros programas te abrirán las puertas al mundo y te harán marcar la diferencia. Te invitamos a trascender, innovar y a ser un líder referencial.</p>
         </div>
         <div class="enlace-carrera">
-          <a href="/carreras/maestrias/calidadProductividad.html">Conoce Más</a>
+          <a href="/carreras/universitarias/calidadProductividad.html">Conoce Más</a>
         </div>
       </div>
       <div class="tarjeta-contenido_central">
@@ -257,31 +257,31 @@
           <p>Nos destacamos por nuestra propuesta única de cinco maestrías que aportan a la formación de profesionales integrales, líderes de impacto y globalmente competitivos. Posgradistas que comprenden las exigencias actuales y destacan en el mundo de los negocios.</p>
         </div>
         <div class="enlace-carrera">
-          <a href="/carreras/maestrias/contabilidad.html">Conoce Más</a>
+          <a href="/carreras/universitarias/contabilidad.html">Conoce Más</a>
         </div>
       </div>
       <div class="tarjeta-contenido_central">
         <div>
-          <img src="/assets/images/img-carreras/" alt="EDInicial">
+          <img src="/assets/images/img-carreras/inicial.PNG" alt="EDInicial">
         </div>
         <div class="tarjeta-contenido_texto">
           <h2>Educación Inicial</h2>
-          <p>Descubre una oferta de clase mundial sin salir de tu país. Nuestros programas te abrirán las puertas al mundo y te harán marcar la diferencia. Te invitamos a trascender, innovar y a ser un líder referencial.</p>
+          <p>Descubre una oferta de clase mundial sin salir de tu país. Nuestros programas te abrirán las puertas al mundo y te harán marcar la diferencia. Te invitamos a trascender, innovar y a ser un líder referencial.</p>1
         </div>
         <div class="enlace-carrera">
-          <a href="/oferta-academica.html">Conoce Más</a>
+          <a href="/carreras/universitarias/inicial.html">Conoce Más</a>
         </div>
       </div>
       <div class="tarjeta-contenido_central">
         <div>
-          <img src="/assets/images/img-carreras/" alt="EDbasica">
+          <img src="/assets/images/img-carreras/basica.PNG" alt="EDbasica">
         </div>
         <div class="tarjeta-contenido_texto">
           <h2>Educación Básica</h2>
           <p>Descubre una oferta de clase mundial sin salir de tu país. Nuestros programas te abrirán las puertas al mundo y te harán marcar la diferencia. Te invitamos a trascender, innovar y a ser un líder referencial.</p>
         </div>
         <div class="enlace-carrera">
-          <a href="/oferta-academica.html">Conoce Más</a>
+          <a href="/carreras/universitarias/basica.html">Conoce Más</a>
         </div>
       </div>
 
