--- a/carreras/universitarias/salud.html
+++ b/carreras/universitarias/salud.html
@@ -36,14 +36,16 @@
     <div class="menu">
       
       <nav class="sub-menu text-center contenedor navbar">
-        <a href="/index.html"><img src="/assets/images/home.png" alt="iconoInicio"></a>
-        <li class="dropdown"><a href="/oferta-academica.html">PREGRADO<i class="bi bi-chevron-down"></i></a>
+        <a href="/index.html"><img src="/assets/images/home1.png" alt="iconoInicio"></a>
+        <li class="dropdown"><a href="/oferta-academica.html">CARRERAS UNIVERSITARIAS<i class="bi bi-chevron-down"></i></a>
           <ul> 
-            <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
-            <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
-            <li><a href="/carreras/maestrias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
-            <li><a href="/carreras/maestrias/calidadProductividad.html">Tecnología Superior en Calidad y Productividad</a></li>
-            <li><a href="formacioncontinua.html">Tecnología Superior Universitaria en Contabilidad</a></li>    
+            <li><a href="/carreras/universitarias/salud.html">Administración de Sistemas de Salud</a></li>
+            <li><a href="/carreras/universitarias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
+            <li><a href="/carreras/universitarias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
+            <li><a href="/carreras/universitarias/calidadProductividad.html">Calidad y Productividad</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Contabilidad</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Educación Básica</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Educación Inicial</a></li>    
           </ul>
         </li>
         <li class="dropdown"><a href="/formacion-continua.html">FORMACIÓN CONTINUA<i class="bi bi-chevron-down"></i></a>
@@ -67,13 +69,15 @@
       <input type="checkbox" id="check" class="menu_checkbox">
       <ul class="menu-mobile-items">
         <li><a href="/index.html">Inicio</a></li>
-        <li class="dropdown"><a href="/ofertaAcademica.html">PREGRADO<i class="bi bi-chevron-down"></i></a>
+        <li class="dropdown"><a href="/ofertaAcademica.html">CARRERAS UNIVERSITARIAS<i class="bi bi-chevron-down"></i></a>
           <ul> 
-            <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
-            <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
-            <li><a href="/carreras/maestrias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
-            <li><a href="/carreras/maestrias/contabilidad.html">Tecnología Superior Universitaria en Contabilidad </a></li>
-            <li><a href="formacioncontinua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
+            <li><a href="/carreras/universitarias/salud.html">Administración de Sistemas de Salud</a></li>
+            <li><a href="/carreras/universitarias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
+            <li><a href="/carreras/universitarias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
+            <li><a href="/carreras/universitarias/calidadProductividad.html">Calidad y Productividad</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Contabilidad</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Educación Básica</a></li>
+            <li><a href="/carreras/universitarias/contabilidad.html">Educación Inicial</a></li>       
           </ul>
         </li>
         <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
@@ -84,9 +88,10 @@
             <li><a href="/carreras/diplomados/adultomayor.html">Cuidados del Adulto Mayor</a></li>   
           </ul>
         </li>
-        <li><a href="/matriculate-online.html">MATRICUALTE ONLINE</a></li>
+        <li><a href="/matriculate-online.html">MATRICULATE ONLINE</a></li>
       </ul>  
     </div>
+
   </header>
 
   <section class="tecnologia-salud">
@@ -95,7 +100,7 @@
       <div class="form-texto">
 
         <div class="texto-esp text-center">
-          <h2>TECNOLOGÍA SUPERIOR UNIVERSITARIA EN ADMINISTRACIÓN DE SISTEMAS DE SALUD</h2>
+          <h2>ADMINISTRACIÓN DE SISTEMAS DE SALUD</h2>
           <!--<p>En este Diplomado, exploraremos la importancia del cuidado
             del adulto mayor, los desafíos que enfrentan los adultos
             mayores y sus cuidadores.</p>
