--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <li class="dropdown"><a href="admisiones-iub.html">ADMISIONES<i class="bi bi-chevron-down"></i></a>
           <ul> 
             <li><a href="oferta-academica.html">CARRERAS UNIVERSITARIAS</a></li> 
-            <li><a href="formacion-continua.html">FORMACION CONTINUA</a></li>
+            <li><a href="formacion-continua.html">FORMACIÓN CONTINUA</a></li>
             <li><a href="formacion-continua.html">POSGRADOS</a></li>   
           </ul>
         </li>
@@ -52,7 +52,7 @@
         </li>
         <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
         <a href="http://localhost/iubonline/matriculate-online.php" target="_blank">MATRICULATE ONLINE</a>
-        <a href="metodologia-estudio.html">METODOLOGIA DE ESTUDIO</a>
+        <a href="metodologia-estudio.html">METODOLOGÍA DE ESTUDIO</a>
         <a href="https://bolivarianovirtual.com/login/index.php">BOLIVARIANO DIGITAL EDUCA</a>
       </nav>
       
@@ -68,7 +68,7 @@
         <li class="dropdown"><a href="admisiones-iub.html">ADMISIONES<i class="bi bi-chevron-down"></i></a>
           <ul> 
             <li><a href="oferta-academica.html">CARRERAS UNIVERSITARIAS</a></li> 
-            <li><a href="formacioncontinua.html">FORMACION CONTINUA</a></li>
+            <li><a href="formacioncontinua.html">FORMACIÓN CONTINUA</a></li>
             <li><a href="formacioncontinua.html">POSGRADOS</a></li>   
           </ul>
         </li>
@@ -85,7 +85,7 @@
         </li>
         <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
         <a href="matriculate-online.html">MATRICULATE ONLINE</a>
-        <a href="metodologia-estudio.html">METODOLOGIA DE ESTUDIO</a>
+        <a href="metodologia-estudio.html">METODOLOGÍA DE ESTUDIO</a>
         <a href="https://bolivarianovirtual.com/login/index.php" target="_blank">BOLIVARIANO DIGITAL EDUCA</a>
       </ul>  
     </div>
